--- a/charts/wordpress/Chart.yaml
+++ b/charts/wordpress/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 name: wordpress
 description: "Using the official WordPress image. This chart provides automation for installation, user management, plugin installation, and metrics."
 type: application
-version: 0.7.1
+version: 0.7.2
 appVersion: "6.8.3"
 icon: https://raw.githubusercontent.com/slydlake/helm-charts/refs/heads/main/charts/wordpress/app.png
 home: https://github.com/slydlake/helm-charts
@@ -26,11 +26,10 @@ annotations:
     - name: slydlake
       email: sly.dlake@gmail.com
   artifacthub.io/changes: |
-    - kind: changed
-      description: "Update docker.io/wordpress to ed5d7a7"
-      links:
-        - name: Pull Request
-          url: https://github.com/slydlake/helm-charts/pull/77
+    - kind: fixed
+      description: "Fix URL plugin installation by handling URL detection at runtime instead of template time"
+     - kind: changed
+      description: "Optimize admin user metadata updates to only run when values actually change"
   artifacthub.io/images: |
     - name: wordpress
       image: docker.io/wordpress:6.8.3-php8.1-apache
