--- a/charts/wordpress/values.yaml
+++ b/charts/wordpress/values.yaml
@@ -179,9 +179,8 @@ wordpress:
     ## @param wordpress.init.debug boolean Enable debug mode in Job "setter"
     debug: false
 
-    ## @param wordpress.init.customInitConfigMap string Name of existing ConfigMap for custom init commands
+    ## @section wordpress.init.customInitConfigMap object ConfigMap for custom init commands
     # ConfigMap containing additional commands to run after init.sh
-    # Must contain a key with shell commands (default key: "commands.sh")
     # These commands will be executed at the end of the init container
     # Example:
     # apiVersion: v1
@@ -192,10 +191,11 @@ wordpress:
     #   commands.sh: |
     #     echo "Running custom init commands..."
     #     wp plugin update --all
-    customInitConfigMap: ""
-
-    ## @param wordpress.init.customInitConfigMapKey string Key in ConfigMap containing custom init commands
-    customInitConfigMapKey: "commands.sh"
+    customInitConfigMap:
+      ## @param wordpress.init.customInitConfigMap.name string Name of existing ConfigMap
+      name: ""
+      ## @param wordpress.init.customInitConfigMap.key string Key in ConfigMap containing custom init commands
+      key: "commands.sh"
 
   ## @section WordPress general settings
 
@@ -337,7 +337,7 @@ wordpress:
   ##   - name: my-mu-plugin           # Copies all keys from this ConfigMap
   ##   - name: my-other-plugin
   ##     key: security.php            # Copies only this specific key
-  ## 
+  ##
   ## Where the ConfigMap looks like:
   ## apiVersion: v1
   ## kind: ConfigMap
