--- a/.github/workflows/renovate-chart-update.yml
+++ b/.github/workflows/renovate-chart-update.yml
@@ -31,6 +31,7 @@ jobs:
       - name: Update Chart.yaml metadata
         env:
           GH_TOKEN: ${{ github.token }}
+          PR_LABELS: ${{ join(github.event.pull_request.labels.*.name, ',') }}
         run: |
           bash .github/scripts/update-chart-metadata.sh \
             "${{ github.event.pull_request.title }}" \
